--- a/themes/hugo-lamp/layouts/post/single.html
+++ b/themes/hugo-lamp/layouts/post/single.html
@@ -12,12 +12,7 @@
         </header>
         <article class="post-content">{{ .Content }}</article>
         <footer class="post-footer">
-            <div id="newsletter">
-                <div class="container">
-                    <div class="description"> Get notified when I write something cool.</div>
-
-                </div>
-            </div>
+            {{ partial "johnathan-author.html" . }}
 
             {{ partial "tags.html" . }}
         </footer>
