--- a/themes/hugo-lamp/assets/sass/style.scss
+++ b/themes/hugo-lamp/assets/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'partials/shortcodes';
 @import 'partials/table';
 @import 'partials/error';
+@import '_fonts';
 
 body {
   -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -1348,7 +1349,7 @@ label,
     background-color: rgba(255, 255, 255, 0.5);
     padding: 5px 15px;
     display: inline-block;
-
+    font-weight: 400;
     &:after {
       content: "READ ARTICLE →";
     }
