--- a/themes/hugo-lamp/assets/sass/style.scss
+++ b/themes/hugo-lamp/assets/sass/style.scss
@@ -1,3 +1,4 @@
+@import "_cf";
 @import 'partials/reset';
 @import 'partials/variables';
 @import 'partials/icons';
@@ -11,6 +12,7 @@
 @import 'partials/table';
 @import 'partials/error';
 @import '_fonts';
+@import '_author-bio';
 
 body {
   -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
