--- a/themes/hugo-lamp/assets/sass/_content.scss
+++ b/themes/hugo-lamp/assets/sass/_content.scss
@@ -4,8 +4,14 @@
       max-width: $content-max;
     }
 
-    > article pre, > article code {
-      max-width: 100%;
+    > article {
+      pre, code {
+        max-width: 100%;
+        * {
+          max-width: 100%;
+        }
+      }
     }
+
   }
 }
