--- a/themes/hugo-lamp/layouts/originals/list.html
+++ b/themes/hugo-lamp/layouts/originals/list.html
@@ -18,12 +18,15 @@
     <header class="list-header">
       {{ $currentPage := . }}
       {{ range .Site.Menus.main }}
-        {{ if or ($currentPage.IsMenuCurrent "original" .) ($currentPage.HasMenuCurrent "originals" .) }}
+        {{ if or ($currentPage.IsMenuCurrent "originals" .) ($currentPage.HasMenuCurrent "originals" .) }}
           <h2 class="list-label">{{ .Name }} Posts</h2>
         {{ end }}
       {{ end }}
     </header>
     {{ $paginator := .Paginate (where .Data.Pages "Type" "original") (index .Site.Params "paginate" | default 10) }}
+    <pre><code>
+        {{ print .Data.Pages }}
+      </code></pre>
     {{ if ne $paginator.TotalPages 0 }}
       {{ range $paginator.Pages.ByDate.Reverse }}
         {{ .Render "summary" }}
@@ -32,6 +35,7 @@
       <p>There's nothing here.<br>Create an interesting post with the command:</p>
       <p><code>$ hugo new post/hello-world.md</code></p>
     {{ end }}
+    <h1>poop</h1>
     {{ if gt $paginator.TotalPages 1 }}
       <nav class="pagination">
         {{ if $paginator.HasPrev }}
