--- a/themes/hugo-lamp/assets/sass/partials/list.scss
+++ b/themes/hugo-lamp/assets/sass/partials/list.scss
@@ -79,7 +79,7 @@
 
   &-summary {
     padding: 0;
-    text-align: justify;
+    text-align: left;
     //max-height: 4rem;
     //overflow: hidden;
   }
