--- a/themes/hugo-lamp/layouts/partials/johnathan-author.html
+++ b/themes/hugo-lamp/layouts/partials/johnathan-author.html
@@ -1,4 +1,5 @@
 <div id="author-bio" class="cf">
-    <p><img src="/uploads/johnathansmith.jpg" class="author-photo" /><strong>Johnathan Smith</strong><br />I am a web developer that specializes in Laravel, PHP, Vue, Javascript and more.
-        I work 100% remotely from my home office near Raleigh, NC. Come and get to <a href="/about">know me better</a>!</p>
+    <p><img src="/uploads/johnathansmith.jpg" class="author-photo" />
+        <strong>Johnathan Smith</strong><br />I am a web developer that specializes in Laravel, PHP, Vue, Javascript and more.
+        I work 100% remotely from my home office near Raleigh, NC. Come get to <a href="/about">know me better</a>!</p>
 </div>
