--- a/themes/hugo-lamp/layouts/partials/title.html
+++ b/themes/hugo-lamp/layouts/partials/title.html
@@ -7,4 +7,4 @@
         {{ end }}
     {{ end }}
 {{ end }}
-{{ $title | plainify }}{{ if .Params.subtitle }} - {{ .Params.subtitle }}{{ end }}
+{{ $title | plainify }}{{ if .Params.subtitle }} | {{ .Params.subtitle }}{{ end }}
