--- a/themes/hugo-lamp/assets/sass/partials/list.scss
+++ b/themes/hugo-lamp/assets/sass/partials/list.scss
@@ -16,6 +16,7 @@
     box-shadow: 0 0 2px 0 rgba(137, 146, 177, 0.15), 0px 3px 10px 0 rgba(137, 146, 177, 0.1);
     border-radius: $radius-large;
     padding: $size-4;
+
     &:hover {
       box-shadow: 0px 1px 15px 0 rgba(137, 146, 177, 0.15), 0px 10px 20px 0 rgba(137, 146, 177, 0.15);
     }
@@ -38,6 +39,7 @@
     @media (min-width: $widescreen) {
       max-width: 500px;
     }
+
     .entry-cover-image {
       height: auto;
       max-height: 100%;
@@ -51,14 +53,16 @@
   }
 
   &-title {
-      margin: 0;
-      padding: 0;
-      line-height: 1.3;
-      text-decoration: underline;
-      a {
-        transition: color 300ms;
-      }
+    margin: 0;
+    padding: 0;
+    line-height: 1.3;
+    text-decoration: underline;
+
+    a {
+      transition: color 300ms;
+    }
   }
+
   &-subtitle {
 
     margin: 0 0 0 0;
@@ -89,12 +93,30 @@
     padding: $space-small 0 0 0;
     border-top: 1px solid $border-color;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column-reverse;
+    @media (min-width: $tablet) {
+      flex-direction: row;
+      > * {
+        -ms-flex-preferred-size: 0;
+        flex-basis: 0;
+        -ms-flex-positive: 1;
+        flex-grow: 1;
+        max-width: 100%;
+      }
+    }
+
+    .post-tags {
+      padding: 0;
+      margin: 0 0 $space-small 0;
+      @media (min-width: $tablet) {
+        margin-top: 0;
+      }
+    }
   }
 
   &-meta {
     margin: 0;
-      font-size: .6rem;
+    font-size: .6rem;
     letter-spacing: 1px;
     text-transform: uppercase;
   }
