--- a/themes/hugo-lamp/assets/sass/partials/content.scss
+++ b/themes/hugo-lamp/assets/sass/partials/content.scss
@@ -27,7 +27,7 @@
 
   h3 {
     margin-top: 1.5rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: $space-normal !important;
     font-size: $size-5;
   }
 
