--- a/themes/hugo-lamp/layouts/_default/baseof.html
+++ b/themes/hugo-lamp/layouts/_default/baseof.html
@@ -16,12 +16,11 @@
         <script async custom-element="amp-sticky-ad" src="https://cdn.ampproject.org/v0/amp-sticky-ad-1.0.js"></script>
       {{ end }}
     {{ end }}
-
-
     <!-- Page Title -->
     <title>{{ partial "title.html" . }}</title>
     <!-- Shared Head -->
     {{ partial "head.html" . }}
+    {{ partial "analytics.html" . }}
   </head>
   <body>
     {{ partial "sidebar.html" . }}
