--- a/themes/hugo-lamp/layouts/partials/head.html
+++ b/themes/hugo-lamp/layouts/partials/head.html
@@ -21,10 +21,12 @@
 <!-- SEO Prefs -->
 <meta name="robots" content="index,follow"/>
 <meta name="referrer" content="origin-when-cross-origin"/>
-{{ if isset .Site.Params "googlesiteverification" }}
-    <meta name="google-site-verification" content="{{ .Site.Params.googleSiteVerification }}"/>{{ end }}
-{{ if isset .Site.Params "msvalidate" }}
-    <meta name="msvalidate.01" content="{{ .Site.Params.msValidate }}"/>{{ end }}
+{{/*{{ if isset .Site.Params "googlesiteverification" }}*/}}
+{{/*    <meta name="google-site-verification" content="{{ .Site.Params.googleSiteVerification }}"/>*/}}
+{{/*{{ end }}*/}}
+{{/*{{ if isset .Site.Params "msvalidate" }}*/}}
+{{/*    <meta name="msvalidate.01" content="{{ .Site.Params.msValidate }}"/>*/}}
+{{/*{{ end }}*/}}
 
 <!--Google fonts-->
 {{/*<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,300,400" rel="stylesheet">*/}}
