--- a/themes/hugo-lamp/assets/sass/partials/variables.scss
+++ b/themes/hugo-lamp/assets/sass/partials/variables.scss
@@ -93,6 +93,8 @@ $color-instagram:#3f729b;
 $color-youtube:#bb0000;
 $color-google:#dd4b39;
 
+$color-link: #63D1F4;
+
 /* Animation */
 $easing:ease-out;
 $speed:0.5s;
