--- a/themes/hugo-lamp/layouts/partials/footer.html
+++ b/themes/hugo-lamp/layouts/partials/footer.html
@@ -16,3 +16,10 @@
       });
     }
   </script>
+
+<script>
+// var navbar = document.getElementById('nav');
+document.getElementById('menu-toggle').addEventListener("click", function(){
+  document.body.classList.toggle('menu-open');
+});
+</script>
