--- a/themes/hugo-lamp/assets/sass/_menu.scss
+++ b/themes/hugo-lamp/assets/sass/_menu.scss
@@ -113,6 +113,14 @@
   .menu {
     display: block;
   }
+
+  #menu-toggle {
+    display: none !important;
+  }
+  body {
+
+    padding-top: 30px;
+  }
 }
 
 
