--- a/themes/hugo-lamp/assets/sass/_menu.scss
+++ b/themes/hugo-lamp/assets/sass/_menu.scss
@@ -1,4 +1,7 @@
-
+html, body {
+  width: 100%;
+  height: 100%;
+}
 
 @media screen and (min-width: 800px) {
   .menu-toggle {
@@ -50,8 +53,7 @@
 }
 
 
-#menu-toggle {
-}
+
 @media screen and (max-width: $tablet - 1) {
 .menu {
   display: none;
@@ -75,7 +77,7 @@
     }
   }
 
-  body.menu-open {
+  html.menu-open {
     height: 100vh !important;
     overflow-y: hidden;
     .menu-toggle {
@@ -154,7 +156,7 @@
   outline: none;
   font-size: 2rem;
   color: #20242b;
-  position: absolute;
+  position: fixed;
   top: 1rem;
   right: 1rem;
 
@@ -170,6 +172,6 @@
   justify-content: center!important;
   -ms-flex-line-pack: center!important;
   align-content: center!important;
-
+  z-index: 5;
 }
 
