--- a/themes/hugo-lamp/layouts/partials/footer.html
+++ b/themes/hugo-lamp/layouts/partials/footer.html
@@ -20,6 +20,6 @@
 <script>
 // var navbar = document.getElementById('nav');
 document.getElementById('menu-toggle').addEventListener("click", function(){
-  document.body.classList.toggle('menu-open');
+  document.documentElement.classList.toggle('menu-open');
 });
 </script>
