Make HR not dotted and full width.

--- a/themes/hugo-lamp/assets/sass/_content.scss
+++ b/themes/hugo-lamp/assets/sass/_content.scss
@@ -3,6 +3,9 @@
     > article *, > header, > footer {
       max-width: $content-max;
     }
+    hr {
+      max-width: 100%;
+    }
 
     > article {
       pre, code {
