--- a/themes/hugo-lamp/assets/sass/partials/reset.scss
+++ b/themes/hugo-lamp/assets/sass/partials/reset.scss
@@ -77,9 +77,9 @@ figure {
  */
 
 hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
+  //box-sizing: content-box; /* 1 */
+  //height: 0; /* 1 */
+  //overflow: visible; /* 2 */
 }
 
 /**
